<resources>
    <string name="app_name">随机计时器</string>
    <string name="difficulty_easy">轻松</string>
    <string name="difficulty_medium">中等</string>
    <string name="difficulty_hard">困难</string>
    <string name="status_idle">当前状态：未开始</string>
    <string name="status_study">当前状态：学习中</string>
    <string name="status_rest">当前状态：休息中</string>
    <string name="start">开始</string>
    <string name="stop">停止</string>
    <string name="notification_channel">随机计时器提醒</string>
    <string name="notification_running">随机计时器运行中</string>
    <string name="notification_study">学习时间开始</string>
    <string name="notification_rest">休息时间开始</string>
    <string name="hint_black_box">黑箱模式：不会显示剩余时间，只会在切换时通知你。</string>
    <string name="notification_permission_denied">未获得通知权限，切换提醒可能无法显示。</string>
    <string name="black_box_mode">黑箱模式</string>
    <string name="time_remaining_idle">剩余时间：未开始</string>
    <string name="time_remaining_format">剩余时间：%1$s</string>
</resources>
